Changelog for Articles.

Articles 1.0.0
===============================
- [#6205] Fix array error in article update controller
- [#6168] Prevent creation of Resources below Articles resources
- Fix issue where article tpl was incorrect in container settings
- [#6164] Prevent changing Resource to Articles when using class_key dropdown
- [#6158] Add ability to "undelete" deleted articles
- [#6161] Fix issue with changing article row chunk
- [#6160] Remove template change reloading for Article types
- Custom UI for article posting
- Container-specific settings
- Integrated RSS feeds with customizable URLs
- Integrated Quip commenting
- Automatic archiving of Articles
- Integrated tagging
- Easy templating for containers and articles
- Initial release.